Added addAll method to Header and refactored cookie handling in BrowserMock